--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "eth123.org",
-  "name": "eth123.org",
+  "short_name": "123btc.org",
+  "name": "123btc.org",
   "icons": [
     {
       "src": "favicon.ico",
