--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 14 # 使用 Node.js v14 LTS
+          node-version: 14
 
       - name: Install dependencies
         run: npm install
